[package]
name = "gitbot"
version = "0.1.0"
authors = ["Mayowa Aj <sagaraaj69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
dotenv = "0.15.0"
rocket = "0.4.5"
rust-crypto = "0.2.36"
hex = "0.3.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json", "uuid"] }
hey_listen = "0.4.0"
white_rabbit = "0.1.1"